--- a/static/index.html
+++ b/static/index.html
@@ -53,22 +53,22 @@
         </div>
     </div><!-- end mobile-menu-panel -->
     <div class="header-dropdown">
-    <img src="img/icons/EDE.png">
-    <ul class="nav">
-        <li class="active"><a href="#">Главная</a></li>
-        <li><a href="#">Цены и сроки</a></li>
-        <li><a href="#">Способы оплаты</a></li>
-        <li><a href="#">Отзывы</a></li>
-        <li><a href="#">О нас</a></li>
-        <li><a href="#">Конакты</a></li>
-    </ul>
-    <a href="#" class="btn ">оформить заявку</a>
-    <div class="header-dropdown-user" >
-        <!-- <a class="link" href="#">Зарегистрироваться</a> -->
-        <img src="img/icons/EDE.png" alt="">
-        <a class="link" href="#">Анастатися</a>
-    </div>
-</div><!-- end header-dropdown -->
+        <img src="img/icons/EDE.png">
+        <ul class="nav">
+            <li class="active"><a href="#">Главная</a></li>
+            <li><a href="#">Цены и сроки</a></li>
+            <li><a href="#">Способы оплаты</a></li>
+            <li><a href="#">Отзывы</a></li>
+            <li><a href="#">О нас</a></li>
+            <li><a href="#">Конакты</a></li>
+        </ul>
+        <a href="#" class="btn ">оформить заявку</a>
+        <div class="header-dropdown-user" >
+            <!-- <a class="link" href="#">Зарегистрироваться</a> -->
+            <img src="img/icons/EDE.png" alt="">
+            <a class="link" href="#">Анастатися</a>
+        </div>
+    </div><!-- end header-dropdown -->
     <div class="container  header-inner">
 
         <h1>Вашу работу выполнит <span>настоящий практик</span><br/>менее чем за 1 неделю</h1>
@@ -76,25 +76,25 @@
 
         <a href="#" class="btn btn-lg">Узнать цену своей работы</a>
 
-        <div class="grid-col3">
+        <div class="header-features-grid">
             <div>
-                <div class="grid-item header-feature">
+                <div class="header-feature header-feature-1">
+                    <div class="header-feature-inner">
+                        <p>Вместе с выполненной работой, вы получите <span>результат проверки её на анти-плагиат</span></p>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="header-feature header-feature-2">
                 <div class="header-feature-inner">
-                  <p>Вместе с выполненной работой, вы получите <span>результат проверки её на анти-плагиат</span></p>
+                    <p>Успешно трудимся с 2004 года, за это время мы ни разу <span>не сорвали сроки выполнения работы</span></p>
                 </div>
 
             </div>
-            </div>
-
-             <div class="grid-item header-feature">
+            <div class="header-feature header-feature-3">
                 <div class="header-feature-inner">
-                  <p>Вместе с выполненной работой, вы получите <span>результат проверки её на анти-плагиат</span></p>
-                </div>
-
-            </div>
-             <div class="grid-item header-feature">
-                <div class="header-feature-inner">
-                  <p>Вместе с выполненной работой, вы получите <span>результат проверки её на анти-плагиат</span></p>
+                    <p>Сопровождаем вас до полной сдачи работы, <span>все доработки выполним бесплатно</span></p>
                 </div>
 
             </div>
@@ -109,6 +109,60 @@
 
 
 </header>
+<div class="main">
+    <section class="features" >
+        <div class="container grid-col3">
+            <div class="feature-item text-center">
+                <p>35</p>
+                <span>Практиков с кандидатской или докторской степенью, работающих в команде более 10-ти лет</span>
+            </div>
+            <div class="feature-item text-center">
+                <p>15 лет</p>
+                <span>Существует наша компания. И с самого начала официально, мы платим налоги и отчисления</span>
+            </div>
+            <div class="feature-item text-center">
+                <p>4,9</p>
+                <span>Средний балл выполненных работ и защищенных при поддержке нашей команды</span>
+            </div>
+
+        </div>
+    </section>
+    <section class="calculation-form">
+        <div class="container-sm">
+            <h3 class="text-center">Узнайте стоимость своей работы</h3>
+            <h4 class="text-center">Мы пришлём точный ответ на вашу почту</h4>
+            <div class="calculation-form-wrapper">
+                <div class="calculation-form-inner">
+                    <div class="form-row">
+                        <div class="select-wrapper">
+                            <select class="form-control" >
+                                <option selected>Вид работы</option>
+                                <option>Вид работы</option>
+                            </select>
+                        </div>
+                        <input class="form-control" value="" placeholder="Предмет">
+
+                        <input class="form-control" value="" placeholder="Предмет">
+                        <div class="d-flex-jc-sb">
+                            <input class="form-control form-control-sm " value="" placeholder="Предмет">
+                            <input class="form-control form-control-sm" value="" placeholder="Предмет">
+                        </div>
+                        <input class="form-control form-control-lg" value="" placeholder="Предмет">
+                    </div>
+
+
+                </div>
+                <div class="calculation-form-footer">
+                    <input class="form-control" value="" placeholder="Предмет">
+                    <input class="form-control" value="" placeholder="Предмет">
+                    <input class="form-control" value="" placeholder="Предмет">
+                </div>
+                <a href="#" class="btn btn-lg m-a mt30">Узнать стоимость своей работы<br><span>ответ придет на ваш почтовый ящик</span></a>
+            </div>
+        </div>
+    </section>
+</div>
+
 
 
 <script>
