--- a/static/index.html
+++ b/static/index.html
@@ -94,7 +94,7 @@
             </div>
             <div class="header-feature header-feature-3">
                 <div class="header-feature-inner">
-                    <p>Сопровождаем вас до полной сдачи работы, <span>все доработки выполним бесплатно</span></p>
+                    <p class="text-block">Сопровождаем вас до полной сдачи работы, <span>все доработки выполним бесплатно</span></p>
                 </div>
 
             </div>
@@ -128,7 +128,7 @@
         </div>
     </section>
     <section class="calculation-form">
-        <div class="container-sm">
+        <div style="margin-top: 140px" class="container-sm">
             <h3 class="text-center">Узнайте стоимость своей работы</h3>
             <h4 class="text-center">Мы пришлём точный ответ на вашу почту</h4>
             <div class="calculation-form-wrapper">
@@ -157,11 +157,126 @@
                     <input class="form-control" value="" placeholder="Предмет">
                     <input class="form-control" value="" placeholder="Предмет">
                 </div>
-                <a href="#" class="btn btn-lg m-a mt30">Узнать стоимость своей работы<br><span>ответ придет на ваш почтовый ящик</span></a>
+                <button  class="btn btn-lg m-a mt30">Узнать стоимость своей работы<br><span>ответ придет на ваш почтовый ящик</span></button>
+                <input type="checkbox" name="personal" checked>
             </div>
         </div>
-    </section>
+    </section><!-- // calculation-form -->
+    <section class="about-man">
+        <div class="container">
+            <h3 class="mb50">Работу выполнит человек, <span>специализирующийся</span><br>на вашей специальности</h3>
+            <p class="text-block">
+                Мы несколько раз меняли исполнителей, именно потому, что нам было необхадимо лично видеть, что человек искрене любит свое дело, а значит, к каждой работе будет подходить уникально и ответственно, работая на результат.
+            </p>
+             <p class="text-block mt30">
+                И вот, наш состав не меняется уже на протяжении 7-ми лет, каждый из нас имеет <strong>докторскую или учёную степень</strong>, а главное, желаение выполнять свое любимое дело, а не просто зарабатывать деньги.
+             </p>
+        </div>
+    </section><!-- // about-man -->
+    <section class="prices">
+        <div class="container">
+           <h3 class="text-center">Цены на основные услуги</h3>
+            <div class="prices-wrapper">
+                <div class="price-item bg-1">
+                    <h5>Дипломая работа</h5>
+                        <p class="mb20">Стоимость:<span>от 7900 руб</span></p>
+                        <p class="mb20">Сроки:<span>от 7 дней</span></p>
+                        <p>Работ выполнено:<span>23,783</span></p>
+                </div>
+                <div class="price-item bg-2">
+                    <h5>Дипломая работа</h5>
+                      <p class="mb20">Стоимость:<span>от 7900 руб</span></p>
+                        <p class="mb20">Сроки:<span>от 7 дней</span></p>
+                        <p>Работ выполнено:<span>23,783</span></p>
+                </div>
+                <div class="price-item bg-3">
+                    <h5>Дипломая работа</h5>
+                      <p class="mb20">Стоимость:<span>от 7900 руб</span></p>
+                        <p class="mb20">Сроки:<span>от 7 дней</span></p>
+                        <p>Работ выполнено:<span>23,783</span></p>
+
+                </div>
+            </div>
+            <a href="#" class="btn btn-md m-a">Посмотреть цены на все услуги</a>
+        </div>
+    </section><!-- // prices -->
+    <section class="how-it-works">
+        <div class="container">
+             <h3 class="text-center">Как происходит ход работы</h3>
+            <h4 class="text-center">Узнайте, что будет, после того как вы обратитесь к нам за помощью</h4>
+            <div class="how-it-works-numbers">
+                <div id="step_1" class="how-it-works-step step-active">
+                    <a href="#"><span>01</span></a>
+                </div>
+                <div id="step_2" class="how-it-works-step">
+
+                    <a href="#"><span>02</span></a>
+                </div>
+                <div id="step_3" class="how-it-works-step">
+                    <a href="#"><span>03</span></a>
+                </div>
+                <div id="step_4" class="how-it-works-step">
+                    <a href="#"><span>04</span></a>
+                </div>
+            </div><!-- // how-it-works-numbers -->
+            <div class="container-sm how-it-works-slider">
+                <div id="slide_1" class="how-it-works-slide slide-active">
+                    <div class="slide-text">
+                       <h5 data-number="01" class="mb30">Оставьте заявку и узнайте цену</h5>
+                       <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с вами и отправим письмо с ценой вашей работы на ваш e-mail</p>
+                    </div>
+                    <div class="slide-img text-right">
+                        <img src="img/hw-slider.jpg" alt="">
+                    </div>
+                </div>
+                 <div id="slide_2" class="how-it-works-slide ">
+                    <div class="slide-text">
+                       <h5 data-number="02" class="mb30">Оставьте заявку и узнайте цену</h5>
+                       <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с вами и отправим письмо с ценой вашей работы на ваш e-mail</p>
+                    </div>
+                    <div class="slide-img text-right">
+                        <img src="img/hw-slider.jpg" alt="">
+                    </div>
+                </div>
+                  <div id="slide_3" class="how-it-works-slide ">
+                    <div class="slide-text">
+                       <h5 data-number="03" class="mb30">Оставьте заявку и узнайте цену</h5>
+                       <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с вами и отправим письмо с ценой вашей работы на ваш e-mail</p>
+                    </div>
+                    <div class="slide-img text-right">
+                        <img src="img/hw-slider.jpg" alt="">
+                    </div>
+                </div>
+                  <div id="slide_4" class="how-it-works-slide ">
+                    <div class="slide-text">
+                       <h5 data-number="04" class="mb30">Оставьте заявку и узнайте цену</h5>
+                       <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с вами и отправим письмо с ценой вашей работы на ваш e-mail</p>
+                    </div>
+                    <div class="slide-img text-right">
+                        <img src="img/hw-slider.jpg" alt="">
+                    </div>
+                </div>
+
+                <div class="slider-arrows">
+                    <div class="slider-arrow-left ">
+                        <a id="arrow-left" href="javascript:void(0)"><span>&#8592;</span></a>
+                        <p>Предыдущий<br/>этап</p>
+                    </div>
+                     <div class="slider-arrow-right">
+                        <a id="arrow-right" href="javascript:void(0)"><span class="text-right">&#8594;</span></a>
+                        <p class="text-right">Следующий<br/>этап</p>
+                    </div>
+                </div><!-- // slider-arrows -->
+
+            </div>
+
+
+        </div>
+
+    </section><!-- // how-it-works -->
+
 </div>
+
 
 
 
@@ -169,6 +284,10 @@
     let mobile_button = document.getElementsByClassName('mobile-toggle')[0]
     let mobile_menu_panel = document.getElementsByClassName('mobile-menu-panel')[0]
     let mobile_menu = document.getElementsByClassName('mobile-menu-panel-inner')[0]
+    let arrow_left = document.getElementById('arrow-left')
+    let arrow_right = document.getElementById('arrow-right')
+    let last_slide = 1
+    let current_slide = 1
 
     mobile_button.onclick = function () {
         this.classList.toggle('mobile-toggle-active')
@@ -177,7 +296,6 @@
     }
     window.addEventListener('scroll', function() {
         console.log(window.innerWidth)
-
         if (window.innerWidth >991 && pageYOffset > 200){
             document.getElementsByClassName('header-dropdown')[0].style.display = 'flex'
             document.getElementsByClassName('header-dropdown')[0].classList.add('header-slide-bottom')
@@ -187,9 +305,43 @@
             document.getElementsByClassName('header-dropdown')[0].classList.remove('header-slide-bottom')
             document.getElementsByClassName('header-dropdown')[0].classList.add('header-slide-top')
         }
-
-
     });
+
+    arrow_left.onclick = function () {
+        console.log('left click')
+    }
+
+     arrow_right.onclick = function () {
+        console.log('right click')
+         console.log('last_slide before', last_slide)
+         console.log('current_slide before', current_slide)
+         let cur_slide = document.getElementsByClassName('slide-active')[0]
+         cur_slide.classList.remove('slide-in')
+         cur_slide.classList.add('slide-out')
+         last_slide = current_slide
+         current_slide += 1
+         console.log('last_slide after', last_slide)
+         console.log('current_slide after', current_slide)
+          setTimeout(function() {
+         document.getElementById(`slide_${last_slide}`).classList.remove('slide-out')
+        document.getElementById(`slide_${last_slide}`).classList.remove('slide-active')
+              }, (1000));
+         setTimeout(function() {
+  document.getElementById(`slide_${current_slide}`).classList.add('slide-active')
+         document.getElementById(`slide_${current_slide}`).classList.add('slide-in')
+    }, (2000));
+
+    }
+
+  //  document.getElementsByClassName('slide-active')[0].addEventListener("webkitAnimationEnd", function () {
+  //      console.log('end')
+  //      document.getElementById(`slide_${last_slide}`).classList.remove('slide-out')
+  //      document.getElementById(`slide_${last_slide}`).classList.remove('slide-active')
+  //      document.getElementById(`slide_${current_slide}`).classList.add('slide-active')
+  //       document.getElementById(`slide_${current_slide}`).classList.add('slide-in')
+    //
+   // })
+
 
 
 </script>
